feat: update to JDK-11
Equinox 2022-03:
        This change comes with a tycho upgrade to 2.5.0, and JDK11.
        The build process is changed: instead of manually building a product configuration, we now use
        p2/[xxx].product to produce a launcher, and we repackage the produced p2 repository, with the launcher and configuration, with maven-archiver.

        This is necessary because equinox does not support configurator.update (jars in a folder), but requires to use P2
        for deployment. P2 deployment is a bit annoying because we need to specify every single bundle
        in a bundles.info file, inside configuration/.

        Eclipse comes with a "dropins" plugin, allowing to deploy extensions inside a folder, without a P2 repository generated.
        We use it for all bluemind product extensions. (Stored in extensions/[plugin.name]/plugins)

        The bm-maven-packaging-plugin was changed to accomodate all this.

        The plugins/ folder now hosts all production jars.
        (main/ is provided to avoid breaking all tools using main/ as a primary target for jars. Although, they will NOT be deployed, because they must be present in the P2 repository!

        We use a symbolic link from src_plugins/ to plugins/ to avoid conflicts when upgrading an old installation,
        where plugins were not handled by the debian/rpm packages.

JDK upgraded to 11:
    Many dependencies updated because of this.

        Most of them: javax. is gone, we need to use jakarta alternative APIs.

        JavaSE-1.8 => JavaSE-11