@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.bluemind</groupId>
 	<artifactId>net.bluemind.global</artifactId>
 	<version>4.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-
 	<profiles>
 		<profile>
 			<id>dev-mode</id>
@@ -14,7 +12,6 @@
 				<l10n.list>"en", "fr"</l10n.list>
 			</properties>
 		</profile>
-
 		<profile>
 			<id>i18n</id>
 			<properties>
@@ -37,33 +34,78 @@
 				</repository>
 			</repositories>
 		</profile>
-
+		<profile>
+			<id>gwt-default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<gwt.draft>false</gwt.draft>
+				<gwt.style>OBFUSCATED</gwt.style>
+				<gwt.optimize>6</gwt.optimize>
+			</properties>
+		</profile>
+		<profile>
+			<id>gwt-draft</id>
+			<activation>
+				<property>
+					<name>env.DRAFT</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<properties>
+				<gwt.draft>true</gwt.draft>
+				<gwt.style>PRETTY</gwt.style>
+				<gwt.optimize>0</gwt.optimize>
+			</properties>
+		</profile>
 	</profiles>
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<tycho-version>1.7.0</tycho-version>
-		<tycho-extras-version>1.7.0</tycho-extras-version>
-		<bm-plugins-version>1.0.495</bm-plugins-version>
-		<bm.metrics.agent>1.29.0</bm.metrics.agent>
+
+		<bm-plugins-version>1.0.499</bm-plugins-version>
+		<bm.metrics.agent>1.30.1</bm.metrics.agent>
+		<docker.devenv.tag>4.1.63005</docker.devenv.tag>
+		<target-platform-version>jdk11-43</target-platform-version>
+
+		<!-- Not to be modified usually -->
+		<tycho-version>2.5.0</tycho-version>
+		<tycho-extras-version>2.5.0</tycho-extras-version>
+		<maven-source-plugin-version>3.2.1</maven-source-plugin-version>
+		<maven-clean-plugin-version>3.2.0</maven-clean-plugin-version>
+		<jacoco-maven-plugin-version>0.8.8</jacoco-maven-plugin-version>
+		<maven-install-plugin-version>2.5.2</maven-install-plugin-version>
+		<maven-compiler-plugin-version>3.10.1</maven-compiler-plugin-version>
+		<maven-surefire-plugin-version>2.22.2</maven-surefire-plugin-version>
+		<maven-javadoc-plugin-version>3.4.0</maven-javadoc-plugin-version>
+		<yuicompressor-maven-plugin-version>1.5.1</yuicompressor-maven-plugin-version>
+		<maven-enforcer-plugin-version>3.1.0</maven-enforcer-plugin-version>
+		<maven-assembly-plugin-version>3.4.0</maven-assembly-plugin-version>
+		<maven-antrun-plugin-version>3.1.0</maven-antrun-plugin-version>
+		<org-json-version>20220320</org-json-version>
+		<xerces-version>2.12.2</xerces-version>
+		<junit-version>4.13.2</junit-version>
+
+		<!-- Minimum viable maven version -->
+		<maven-minimum-version>3.2.5</maven-minimum-version>
+
+		<gwt.version>2.10.0</gwt.version>
+		<gwt.memory>768</gwt.memory>
 		<maven.test.failure.ignore>true</maven.test.failure.ignore>
 		<sonar.language>java</sonar.language>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 		<sonar.jacoco.excludes>**/*Test*,**/generated/**/*,**/*.tests/**/*</sonar.jacoco.excludes>
 		<l10n.list>"en", "fr"</l10n.list>
-		<docker.devenv.tag>4.1.63853</docker.devenv.tag>
-		<gwt.version>2.8.2</gwt.version>
-		<gwt.draft>true</gwt.draft>
-		<gwt.memory>768</gwt.memory>
-		<bm.test.argline>-Dio.netty.noPreferDirect=true -XX:-OmitStackTraceInFastThrow</bm.test.argline>
+		<bm.test.argline>-Dio.netty.noPreferDirect=true -XX:-OmitStackTraceInFastThrow --add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --illegal-access=permit</bm.test.argline>
 	</properties>
-
 	<repositories>
 		<repository>
 			<id>bluemind-deps</id>
 			<layout>p2</layout>
-			<url>https://forge.bluemind.net/staging/p2/dependencies/647/</url>
+			<url>https://forge.bluemind.net/staging/p2/dependencies/${target-platform-version}/</url>
+			<!--<url>file:///Users/tom/git/target-platform-jdk11/bm-platform/target/repository</url>-->
+			<!--<url>file:///home/melanie/Documents/DEV/repos/bluemind-all-dev-tests/bm-target-platform-jdk11/bm-platform/target/repository</url>-->
 		</repository>
 		<repository>
 			<id>nexus-central</id>
@@ -76,38 +118,52 @@
 		<repository>
 			<id>tigase</id>
 			<url>https://build.tigase.org/maven</url>
-
 			<snapshots>
 				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
 			</snapshots>
 		</repository>
 	</repositories>
-
 	<pluginRepositories>
 		<pluginRepository>
 			<id>bm-maven-plugins</id>
 			<url>https://forge.bluemind.net/nexus/content/repositories/snapshots</url>
-
 			<snapshots>
 				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
 			</snapshots>
 		</pluginRepository>
-
 		<pluginRepository>
 			<id>bm-maven-plugins-releases</id>
 			<url>https://forge.bluemind.net/nexus/content/repositories/releases</url>
-
 			<snapshots>
 				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
-
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>${maven-enforcer-plugin-version}</version>
+				<executions>
+					<execution>
+						<id>enforce-maven</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+									<version>${maven-minimum-version}</version>
+								</requireMavenVersion>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
@@ -118,21 +174,30 @@
 				<artifactId>maven-source-plugin</artifactId>
 			</plugin>
 		</plugins>
-
 		<pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>${maven-assembly-plugin-version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-antrun-plugin</artifactId>
+					<version>${maven-antrun-plugin-version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-install-plugin</artifactId>
-					<version>2.5.2</version>
+					<version>${maven-install-plugin-version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.5.1</version>
+					<version>${maven-compiler-plugin-version}</version>
 					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
+						<source>11</source>
+						<target>11</target>
 					</configuration>
 					<executions>
 						<execution>
@@ -144,10 +209,9 @@
 						</execution>
 					</executions>
 				</plugin>
-
 				<plugin>
 					<artifactId>maven-clean-plugin</artifactId>
-					<version>2.6.1</version>
+					<version>${maven-clean-plugin-version}</version>
 					<configuration>
 						<filesets>
 							<fileset>
@@ -159,7 +223,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
-					<version>3.0.1</version>
+					<version>${maven-source-plugin-version}</version>
 					<executions>
 						<execution>
 							<id>attach-sources</id>
@@ -177,17 +241,33 @@
 					<extensions>true</extensions>
 					<configuration>
 						<encoding>UTF-8</encoding>
-						<source>1.8</source>
-						<target>1.8</target>
+						<source>11</source>
+						<target>11</target>
 					</configuration>
 				</plugin>
-
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-packaging-plugin</artifactId>
 					<version>${tycho-version}</version>
 				</plugin>
-
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-p2-director-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<executions>
+						<execution>
+							<id>create-product-distributions</id>
+							<goals>
+								<goal>materialize-products</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-p2-repository-plugin</artifactId>
+					<version>${tycho-version}</version>
+				</plugin>
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-compiler-plugin</artifactId>
@@ -198,8 +278,8 @@
 							<annotationProcessor>net.bluemind.codegen.processor.MetaModelProcessor</annotationProcessor>
 						</annotationProcessors>
 						<generatedSourcesDirectory>${basedir}/generated</generatedSourcesDirectory>
-						<source>1.8</source>
-						<target>1.8</target>
+						<source>11</source>
+						<target>11</target>
 						<useProjectSettings>false</useProjectSettings>
 					</configuration>
 					<dependencies>
@@ -211,18 +291,15 @@
 						</dependency>
 					</dependencies>
 				</plugin>
-
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-source-plugin</artifactId>
 					<version>${tycho-version}</version>
-
 				</plugin>
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-surefire-plugin</artifactId>
 					<version>${tycho-version}</version>
-
 					<inherited>true</inherited>
 					<configuration>
 						<includes>
@@ -235,17 +312,17 @@
 						<useUIThread>false</useUIThread>
 						<failIfNoTests>false</failIfNoTests>
 						<product>org.eclipse.platform.ide</product>
-						<argLine>${tycho.testArgLine} ${bm.test.argline}</argLine>
+						<argLine>${bm.test.argline}</argLine>
 						<forkedProcessTimeoutInSeconds>2400</forkedProcessTimeoutInSeconds>
 						<systemPropertyVariables>
-            				<net.fortuna.ical4j.timezone.cache.impl>net.fortuna.ical4j.util.MapTimeZoneCache</net.fortuna.ical4j.timezone.cache.impl>
-            			</systemPropertyVariables>
+							<net.fortuna.ical4j.timezone.cache.impl>net.fortuna.ical4j.util.MapTimeZoneCache</net.fortuna.ical4j.timezone.cache.impl>
+						</systemPropertyVariables>
 					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.12.4</version>
+					<version>${maven-surefire-plugin-version}</version>
 					<executions>
 						<execution>
 							<id>test</id>
@@ -255,11 +332,11 @@
 									<include>**/*Test.java</include>
 								</includes>
 								<testClassesDirectory>${basedir}/target/classes</testClassesDirectory>
-								<argLine>${tycho.testArgLine} ${bm.test.argline}</argLine>
+								<argLine>${bm.test.argline}</argLine>
 								<forkedProcessTimeoutInSeconds>2400</forkedProcessTimeoutInSeconds>
 								<systemPropertyVariables>
-            						<net.fortuna.ical4j.timezone.cache.impl>net.fortuna.ical4j.util.MapTimeZoneCache</net.fortuna.ical4j.timezone.cache.impl>
-            					</systemPropertyVariables>
+									<net.fortuna.ical4j.timezone.cache.impl>net.fortuna.ical4j.util.MapTimeZoneCache</net.fortuna.ical4j.timezone.cache.impl>
+								</systemPropertyVariables>
 							</configuration>
 							<goals>
 								<goal>test</goal>
@@ -267,11 +344,10 @@
 						</execution>
 					</executions>
 				</plugin>
-
 				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.7.5.201505241946</version>
+					<version>${jacoco-maven-plugin-version}</version>
 					<configuration>
 						<destFile>${sonar.jacoco.reportPath}</destFile>
 						<append>true</append>
@@ -287,7 +363,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.7</version>
+					<version>${maven-javadoc-plugin-version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
@@ -296,13 +372,13 @@
 					<configuration>
 						<environments>
 							<environment>
-								<os>win32</os>
-								<ws>win32</ws>
+								<os>linux</os>
+								<ws>gtk</ws>
 								<arch>x86_64</arch>
 							</environment>
 							<environment>
-								<os>linux</os>
-								<ws>gtk</ws>
+								<os>win32</os>
+								<ws>win32</ws>
 								<arch>x86_64</arch>
 							</environment>
 							<environment>
@@ -324,7 +400,7 @@
 				<plugin>
 					<groupId>net.alchim31.maven</groupId>
 					<artifactId>yuicompressor-maven-plugin</artifactId>
-					<version>1.5.1</version>
+					<version>${yuicompressor-maven-plugin-version}</version>
 					<executions>
 						<execution>
 							<phase>prepare-package</phase>
@@ -338,7 +414,6 @@
 						<force>true</force>
 						<disableOptimizations>true</disableOptimizations>
 						<jswarn>false</jswarn>
-
 						<nomunge>true</nomunge>
 						<nosuffix>true</nosuffix>
 						<outputDirectory>web-resources</outputDirectory>
@@ -346,7 +421,6 @@
 						<webappDirectory>web-resources</webappDirectory>
 					</configuration>
 				</plugin>
-
 				<plugin>
 					<groupId>net.bluemind</groupId>
 					<artifactId>bm-docker-maven-plugin</artifactId>
@@ -360,61 +434,51 @@
 						</execution>
 					</executions>
 				</plugin>
-
 				<plugin>
 					<groupId>net.bluemind</groupId>
 					<artifactId>net.bluemind.codegen.php</artifactId>
 					<version>${bm-plugins-version}</version>
 				</plugin>
-
 				<plugin>
 					<groupId>net.bluemind</groupId>
 					<artifactId>net.bluemind.codegen.gwt</artifactId>
 					<version>${bm-plugins-version}</version>
 				</plugin>
-
 				<plugin>
 					<groupId>net.bluemind</groupId>
 					<artifactId>net.bluemind.codegen.js</artifactId>
 					<version>${bm-plugins-version}</version>
 				</plugin>
-
 				<plugin>
 					<groupId>net.bluemind</groupId>
 					<artifactId>net.bluemind.codegen.closure</artifactId>
 					<version>${bm-plugins-version}</version>
 				</plugin>
-
 				<plugin>
 					<groupId>net.bluemind</groupId>
 					<artifactId>net.bluemind.codegen.csharp</artifactId>
 					<version>${bm-plugins-version}</version>
 				</plugin>
-
 				<plugin>
 					<groupId>net.bluemind</groupId>
 					<artifactId>net.bluemind.codegen.moz.js</artifactId>
 					<version>${bm-plugins-version}</version>
 				</plugin>
-
 				<plugin>
 					<groupId>net.bluemind</groupId>
 					<artifactId>net.bluemind.codegen.doc</artifactId>
 					<version>${bm-plugins-version}</version>
 				</plugin>
-
 				<plugin>
 					<groupId>net.bluemind</groupId>
 					<artifactId>net.bluemind.codegen.python</artifactId>
 					<version>${bm-plugins-version}</version>
 				</plugin>
-
 				<plugin>
 					<groupId>net.bluemind</groupId>
 					<artifactId>bm-plovr-maven-plugin</artifactId>
 					<version>${bm-plugins-version}</version>
 				</plugin>
-
 				<plugin>
 					<groupId>net.bluemind</groupId>
 					<artifactId>bm-packaging-maven-plugin</artifactId>
@@ -439,10 +503,13 @@
 							</goals>
 							<configuration>
 								<draftCompile>${gwt.draft}</draftCompile>
+								<optimize>${gwt.optimize}</optimize>
 								<inplace>true</inplace>
 								<generateJsInteropExports>true</generateJsInteropExports>
 								<warSourceDirectory>web-resources</warSourceDirectory>
 								<localWorkers>1</localWorkers>
+								<logLevel>INFO</logLevel>
+								<sourceLevel>11</sourceLevel>
 								<collapse-all-properties/>
 							</configuration>
 						</execution>
@@ -451,27 +518,24 @@
 						<dependency>
 							<groupId>org.json</groupId>
 							<artifactId>json</artifactId>
-							<version>20090211</version>
+							<version>${org-json-version}</version>
 						</dependency>
 						<dependency>
 							<groupId>xerces</groupId>
 							<artifactId>xercesImpl</artifactId>
-							<version>2.9.1</version>
+							<version>${xerces-version}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
-
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>${junit-version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-
 </project>
